samples/_failures_safe/1761535911_311868_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19cebd97.c: In function ‘main’:
./samples/SAFE/__tmp_19cebd97.c:159:12: error: missing terminating " character
  159 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_19cebd97.c:159:5: error: expected expression at end of input
  159 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_19cebd97.c:159:5: error: expected declaration or statement at end of input
